Configured Webpack to work with SCSS files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="dist/main.bundle.js"></script>
   </head>
   <body>
-
+    <div class="content">
+      <p>ASSADs</p>
+    </div>
   </body>
 </html>
