--- a/application/index.html
+++ b/application/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>focus-budget-manager</title>
+    <meta name="viewport" content="initial-scale=1">
   </head>
   <body>
     <div id="app"></div>
