--- a/application/index.html
+++ b/application/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>focus-budget-manager</title>
     <meta name="viewport" content="initial-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
